** file:line
*** scenario (or step within)
*** scenario outline
*** scenario outline examples
*** line in an example table
*** background (same as whole file)
*** fix bugs in any of those cases (there are some)
** --tags
*** Link to page about tags
* Tags with arguments
* cucumber.jar + examples
** Remove need for -S cucumber
** Full jar and simple jar

== Bugfixes
* Re-structure the ast: Feature -> Background -> (Scenario|ScenarioOutline)*. Fixes bug with background being called outside transactions. (#181 Joseph Wilk)
* --strict always exits with status 1 (#230 Tim Cuthbertson)
* Fix error with nil values in tables raising an exception (#227 Joseph Wilk)
* Add support for using << in formatters to ensure the html formatter works (#210 Joseph Wilk)
* Explicitly require env.rb files first to avoid potential load order problems. (#213, Ben Mabey, Randy Harmon)
* Depend on polyglot version (0.2.4) to avoid masking require errors. (Aslak Hellesøy).
* -n option does not suppress the line info for a Scenario Outline (#175 Aslak Hellesøy)
* Errors with rspec-rails matchers in cucumber 0.1.99 (#173 David Chelimsky)
* Can't use an empty string as a table value in a scenario outline (#172 Aslak Hellesøy)
* Really skip skipped steps (#90 Aslak Hellesøy)
* No output for multi-line strings (#71 Aslak Hellesøy)
* Fix cucumber/formatters/unicode flaws on Windows (#145 Michael)
* Autotest-related Bugs: YAML missing (#136 Tobias Pape)
* Overeager "rescue LoadError" hides lots of errors (#137 Jonathan del Strother)
* Nested steps don't show mismatch (#116 Aslak Hellesøy)
* Pending steps in > steps called from steps (#65 Aslak Hellesøy)

=== New features
* Added World#announce(announcment) which lets you output text to the formatted output (#222 Rob Kaufmann)
* Added Table#transpose to to allow use of vertically aligned table keys (Torbjørn Vatn, Aslak Hellesøy)
* Added Table#map_headers to to allow use of more readable headers (Rob Holland)